UI Tests Pivot and Text Box

--- a/src/SamplesApp/UITests.Shared/Windows_UI_Xaml_Controls/Pivot/Pivot_CustomContent_Automated.xaml
+++ b/src/SamplesApp/UITests.Shared/Windows_UI_Xaml_Controls/Pivot/Pivot_CustomContent_Automated.xaml
@@ -25,7 +25,8 @@
 			<Pivot.HeaderTemplate>
 				<DataTemplate>
 					<StackPanel>
-						<TextBlock Text="{Binding Title}" />
+						<TextBlock x:Name="ItemHeaderTextBlock"
+								   Text="{Binding Title}" />
 					</StackPanel>
 				</DataTemplate>
 			</Pivot.HeaderTemplate>
